refactor: rename package and update imports to use flutter_fastapi_example

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,4 +1,4 @@
-name: fastapi_example
+name: flutter_fastapi_example
 description: A new Flutter project.
 
 # The following line prevents the package from being accidentally published to
